# evGP2020

./: README.md  visoin_based_steering.py
C++/Phoenix-Linux-SocketCAN-Example/: example.cpp
C++/closed_loop_client/: CMakeLists.txt~  client.cpp  client.cpp~
C++/final_control/: CMakeLists.txt  client.cpp  client.cpp~
C++/remote_control_client/: CMakeLists.txt  client.cpp
C++/remote_control_server/: CMakeLists.txt  server.cpp
C++/steering_PWM_DS4/: CMakeLists.txt  example.cpp  example.cpp~
C++/steering_PWM_keyboard/: steering.py  steering.py~
C++/test_client/: client  client.cpp
C++/test_server/: server  server.cpp
catkin_ws/data sheets/: run a class in ros - Google Search.html
catkin_ws/data sheets/run a class in ros - Google Search_files/: app.html  m=Adromf,ZuqZhb,c3JEL  rs=ACT90oGhBiGT0X0LPe2HLu5QuiUOzsaysA
catkin_ws/devel/include/cepton_ros/: SensorInformation.h
catkin_ws/devel/include/inertial_sense/: FirmwareUpdateRequest.h  FirmwareUpdateResponse.h  GNSSEphemeris.h  GNSSObsVec.h  GNSSObservation.h  GPS.h  GPSInfo.h  GTime.h  GlonassEphemeris.h  PreIntIMU.h  RTKInfo.h  RTKRel.h  SatInfo.h  refLLAUpdateRequest.h  refLLAUpdateResponse.h
catkin_ws/devel/lib/inertial_sense/: ISAsciiExample  ISBootloaderExample  ISCommunicationsExample  ISLogReaderExample  ISLoggerExample  cltool  inertial_sense_node
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  cepton_ros.pc  inertial_sense.pc  sys.pc  (+1 more)
catkin_ws/src/sys/: CMakeLists.txt  package.xml
data sheets/run a class in ros - Google Search_files/: m=QPfswe,Uuupec,r36a9c,xj7LNb
(+25 files in other folders)
